# flatterer-web

./: .gitignore  Aptfile  Cargo.toml  Procfile  README.md  index.html  package-lock.json  package.json  vite.config.js
public/: index.html  wasm.json
src/: App.vue  buffered_byte_stream.rs  lib.rs  limited_copy.rs  main.js  main.rs
src/snapshots/: flatterer_web__tests__preview_output.snap  flatterer_web__tests__remove_field-2.snap  flatterer_web__tests__remove_field.snap
src/store/: index.js
src/views/: Home.vue
ui/: package.json
ui/src/: App.vue
ui/src/store/: index.js
ui/src/views/: About.vue  Home.vue
