[package]
name = "flatterer-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
futures = "0.3"
async-std = { version = "1.10.0", features = ["attributes", "unstable"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
libflatterer = { version = "0.12.3" }
tempfile = "3"
surf = "2.3"
zip = "0.5"
walkdir = "2"
env_logger = "0.9"
uuid = { version = "0.8", features = ["serde", "v4"] }
multer= "2"
futures-core="0.3"
csv="1"
pin-project-lite="0.2.8"

[dev-dependencies]
tide-testing = "0.1.3"
insta = {version = "1.8.0", features = ["redactions"]}
