[package]
name = "flatterer-web"
version = "0.18.0"
authors = ["David Raznick <kindly@gmail.com>"]
edition = "2021"
description = "JSON flatterer UI"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
futures = "0.3"
async-std = { version = "1.10.0", features = ["attributes", "unstable"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
libflatterer = { version = "0.18.0" }
tempfile = "3"
surf = "2.3"
zip = "0.5"
walkdir = "2"
env_logger = "0.9"
uuid = { version = "0.8", features = ["serde", "v4"] }
multer= "2"
futures-core="0.3"
csv="1"
pin-project-lite="0.2.8"
open = "3.0.2"
http-types = "2.12.0"

[dev-dependencies]
tide-testing = "0.1.3"
insta = {version = "1.8.0", features = ["redactions", "yaml"]}

[[bin]]
name = "flatterer_web"
path = "src/main.rs"

[lib]
name = "flatterer_web"
path = "src/lib.rs"
