[package]
name = "flatterer-web"
version = "0.21.0"
authors = ["David Raznick <kindly@gmail.com>"]
edition = "2021"
description = "JSON flatterer UI"
license = "MIT"


[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
libflatterer = { version = "0.21.0" }
tempfile = "3"
zip = "0.6.6"
walkdir = "2"
env_logger = "0.10.1"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
futures-core = "0.3"
csv = "1"
pin-project-lite = "0.2.8"
open = "5.0.1"
http-types = "2.12.0"
flate2 = "1.0.26"
log = "0.4"
actix-multipart = "0.7.2"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
futures-util = "0.3.31"
tokio = "1.44.1"
futures = "0.3.31"
eyre = "0.6.12"

[dev-dependencies]
insta = { version = "1.8.0", features = ["redactions", "yaml"] }

[[bin]]
name = "flatterer_web"
path = "src/main.rs"

[lib]
name = "flatterer_web"
path = "src/lib.rs"
